resolved issue with index message not appearing correctly aligned

--- a/static/main.css
+++ b/static/main.css
@@ -11,6 +11,10 @@ body {
     flex: 1;
 }
 
+.index-message {
+    background-color: #F8A825;
+}
+
 input {
     outline-color: black;
 }
